workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__esc_interrupt_goal_paused_footer@windows.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Workx to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project              Goal paused (/goal resume)    "
